--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.0)
 project(wi4mpi)
-enable_language(C Fortran)
+enable_language(C CXX Fortran)
 
 set(VERSION_MAJOR 3)
 set(VERSION_MINOR 2)
@@ -48,6 +48,7 @@ if(WI4MPI_COMPILER MATCHES GNU)
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared -pthread")
     set(WI4MPI_FORT_CALL "-DGFORT_CALL")
     set(CC "gcc")
+    set(CXX "g++")
     set(FC "gfortran")
 elseif(WI4MPI_COMPILER MATCHES INTEL)
     set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread")
@@ -56,6 +57,7 @@ elseif(WI4MPI_COMPILER MATCHES INTEL)
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared -pthread")
     set(WI4MPI_FORT_CALL "-DIFORT_CALL")
     set(CC "icc")
+    set(CXX "icpc")
     set(FC "ifort")
 elseif(WI4MPI_COMPILER MATCHES PGI)
     set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -c11 -fPIC -shared")
@@ -64,6 +66,7 @@ elseif(WI4MPI_COMPILER MATCHES PGI)
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -c11 -fPIC -shared")
     set(WI4MPI_FORT_CALL "-DPGI_CALL")
     set(CC "pgcc")
+    set(CXX "pgc++")
     set(FC "pgfortran")
 elseif(WI4MPI_COMPILER MATCHES LLVM)
     set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared")
@@ -72,6 +75,7 @@ elseif(WI4MPI_COMPILER MATCHES LLVM)
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared")
     set(WI4MPI_FORT_CALL "-DFLANG_CALL")
     set(CC "clang")
+    set(CXX "clang++")
     set(FC "flang")
 elseif(WI4MPI_COMPILER MATCHES ARMCLANG)
     set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared")
@@ -80,6 +84,7 @@ elseif(WI4MPI_COMPILER MATCHES ARMCLANG)
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared")
     set(WI4MPI_FORT_CALL "-DFLANG_CALL")
     set(CC "armclang")
+    set(CXX "armclang++")
     set(FC "armflang")
 endif()
 
