--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,3 +18,4 @@ configure_file (${CMAKE_CURRENT_SOURCE_DIR}/etc/batch.cfg.in
 
 add_subdirectory (compile)
 add_subdirectory (mpirun)
+add_subdirectory (mpi_init)
