--- a/Testing/timeout/CMakeLists.txt
+++ b/Testing/timeout/CMakeLists.txt
@@ -1,6 +1,8 @@
 project (timeout)
 cmake_minimum_required (VERSION 2.8)
 
+file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/timeout_slow_add.c
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/run_timeout_tests.sh
         DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
