--- a/Testing/etc/batch.cfg.in
+++ b/Testing/etc/batch.cfg.in
@@ -11,3 +11,6 @@ WI4MPI_CXX=@CXX@
 WI4MPI_FC=@FC@
 WI4MPI_ROOT=@CMAKE_INSTALL_PREFIX@
 WI4MPI_TO=OpenMPI
+WI4MPI_RUN_MPI_C_LIB=@OPENMPI_ROOT@/lib/libmpi.so
+WI4MPI_RUN_MPI_F_LIB=@OPENMPI_ROOT@/lib/libmpi_mpifh.so
+WI4MPI_WRAPPER_LIB=@CMAKE_INSTALL_PREFIX@/lib_OMPI/libwi4mpi_OMPI.so
