Testing: add MPI_File_open test

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory (compile)
 add_subdirectory (mpirun)
 add_subdirectory (mpi_init)
 add_subdirectory (timeout)
+add_subdirectory (mpiio)
