--- a/etc/wi4mpi.cfg.in
+++ b/etc/wi4mpi.cfg.in
@@ -1,7 +1,7 @@
 #This part is handled by cmake
 WI4MPI_VERSION="@WI4MPI_VERSION@"
-OPENMPI_DEFAULT_ROOT="@OPENMPI_ROOT@"
 #Please provide the following variables to use the launcher
-INTELMPI_DEFAULT_ROOT=""
-MPC_DEFAULT_ROOT=""
-MPICH_DEFAULT_ROOT=""
+OPENMPI_DEFAULT_ROOT="@OPENMPI_ROOT@"
+INTELMPI_DEFAULT_ROOT="@INTELMPI_ROOT@"
+MPC_DEFAULT_ROOT="@MPC_ROOT@"
+MPICH_DEFAULT_ROOT="@MPICH_ROOT@"
