--- a/generator/FORTRAN/mappers_f.json
+++ b/generator/FORTRAN/mappers_f.json
@@ -423,6 +423,13 @@
     "r2a": "source_r2a"
   ,"debug_type":"%*d"
 }, 
+  "dest_converter": {
+    "local_alloc": 0, 
+    "a2r": "dest_a2r", 
+    "type": "int ", 
+    "r2a": "dest_r2a"
+  ,"debug_type":"%*d"
+}, 
   "datarep_conversion_ptr_converter": {
     "local_alloc": 0, 
     "a2r": "datarep_conversion_ptr_conv_a2r", 
