--- a/generator/C/mappers.json
+++ b/generator/C/mappers.json
@@ -641,6 +641,20 @@
     "r2a": "dest_conv_r2a",
     "debug_type":"%*d"
   },
+  "combiner_converter":{
+    "local_alloc" : 0,
+    "a2r": "dest_conv_a2r",
+    "type": "int",
+    "r2a": "dest_conv_r2a",
+    "debug_type":"%d"
+  },
+  "combiner_ptr_converter":{
+    "local_alloc" : 1,
+    "a2r": "dest_conv_a2r",
+    "type": "int *",
+    "r2a": "dest_conv_r2a",
+    "debug_type":"%*d"
+  },
   "datarep_conversion_re_ptr_converter": {
     "local_alloc": 0, 
     "a2r": "datarep_conversion_ptr_conv_a2r", 
