--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,3 +14,7 @@ build:
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: doc/source/conf.py
+
+python:
+  install:
+  - requirements: sphinx_rtd_theme
