use standard CMake construct to set C11 standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.1.0)
 project(wi4mpi)
 
 if(POLICY CMP0054)
@@ -85,10 +85,10 @@ elseif(WI4MPI_COMPILER MATCHES INTEL)
     set(CXX "icpc")
     set(FC "ifort")
 elseif(WI4MPI_COMPILER MATCHES PGI)
-    set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -c11 -fPIC -shared")
-    set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -c11 -fPIC -shared -DDEBUG")
-    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -c11 -fPIC -shared -D_WI4MPI_GCC_JIT")
-    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -c11 -fPIC -shared")
+    set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared")
+    set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -DDEBUG")
+    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -D_WI4MPI_GCC_JIT")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared")
     set(WI4MPI_FORT_CALL "-DPGI_CALL")
     set(CC "pgcc")
     set(CXX "pgc++")
@@ -149,6 +149,8 @@ if("${FC_PATH}" MATCHES "FC_PATH-NOTFOUND")
     Current value of FC is: ${FC}")
 endif()
 enable_language(C CXX Fortran)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
 
 #Define the compiling option according to the chosen release
 if(WI4MPI_RELEASE MATCHES DEBUG)
