use add_definitions for -DTIMEOUT_SUPPORT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ if(NOT WI4MPI_COMPILER)
 endif()
 if(CMAKE_SYSTEM_NAME MATCHES Linux)
     set(WI4MPI_TIMEOUT ON)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DTIMEOUT_SUPPORT")
+    add_definitions(-DTIMEOUT_SUPPORT)
 else()
     set(WI4MPI_TIMEOUT OFF)
 endif()
