replace WI4MPI_FORT_CALL by add_definition()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ if(WI4MPI_COMPILER MATCHES GCC OR WI4MPI_COMPILER MATCHES GNU)
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared -pthread")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fcommon")
-    set(WI4MPI_FORT_CALL "-DGFORT_CALL")
+    add_definitions(-DGFORT_CALL)
     set(CC "gcc")
     set(CXX "g++")
     set(FC "gfortran")
@@ -71,7 +71,7 @@ elseif(WI4MPI_COMPILER MATCHES INTEL)
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared -pthread")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fcommon")
-    set(WI4MPI_FORT_CALL "-DIFORT_CALL")
+    add_definitions(-DIFORT_CALL)
     set(CC "icc")
     set(CXX "icpc")
     set(FC "ifort")
@@ -80,7 +80,7 @@ elseif(WI4MPI_COMPILER MATCHES PGI)
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared")
-    set(WI4MPI_FORT_CALL "-DPGI_CALL")
+    add_definitions(-DPGI_CALL)
     set(CC "pgcc")
     set(CXX "pgc++")
     set(FC "pgfortran")
@@ -92,7 +92,7 @@ elseif(WI4MPI_COMPILER MATCHES LLVM)
     # Allow implicit declartion with clang
     # FIXME: we should properly declare/include to not have to use that
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fcommon -Wno-error=implicit-function-declaration")
-    set(WI4MPI_FORT_CALL "-DFLANG_CALL")
+    add_definitions(-DFLANG_CALL)
     set(CC "clang")
     set(CXX "clang++")
     set(FC "flang")
@@ -101,7 +101,7 @@ elseif(WI4MPI_COMPILER MATCHES ARMCLANG)
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared")
-    set(WI4MPI_FORT_CALL "-DFLANG_CALL")
+    add_definitions(-DFLANG_CALL)
     set(CC "armclang")
     set(CXX "armclang++")
     set(FC "armflang")
@@ -110,7 +110,7 @@ elseif(WI4MPI_COMPILER MATCHES FUJITSU)
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared -pthread")
-    set(WI4MPI_FORT_CALL "-DGFORT_CALL")
+    add_definitions(-DGFORT_CALL)
     set(CC "fcc")
     set(CXX "FCC")
     set(FC "frt")
