remove -D_GNU_SOURCE from flags, add it to generated fortran translation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -197,19 +197,19 @@ set_target_properties(mpi
                      )
 set_target_properties(wi4mpi_OMPI
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_OMPI -D__MPI__COMPILE__ -D_GNU_SOURCE"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_OMPI -D__MPI__COMPILE__"
                      )
 set_target_properties(wi4mpi_INTEL
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_INTEL -D_GNU_SOURCE"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_INTEL"
                      )
 set_target_properties(wi4mpi_MPICH
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_INTEL -D_GNU_SOURCE"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_INTEL"
                      )
 set_target_properties(wi4mpi_MPC
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_MPC -D_GNU_SOURCE"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_MPC"
                      )
 
 set_target_properties(mpi_a
@@ -218,19 +218,19 @@ set_target_properties(mpi_a
                      )
 set_target_properties(wi4mpi_OMPI_a
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_OMPI -D__MPI__COMPILE__ -D_GNU_SOURCE -DWI4MPI_STATIC"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_OMPI -D__MPI__COMPILE__ -DWI4MPI_STATIC"
                      )
 set_target_properties(wi4mpi_INTEL_a
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_INTEL -DWI4MPI_STATIC"
                      )
 set_target_properties(wi4mpi_MPICH_a
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_INTEL -D_GNU_SOURCE -DWI4MPI_STATIC"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_INTEL -DWI4MPI_STATIC"
                      )
 set_target_properties(wi4mpi_MPC_a
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_MPC -D_GNU_SOURCE -DWI4MPI_STATIC"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_MPC -DWI4MPI_STATIC"
                      )
 
 if(CMAKE_Fortran_COMPILER_ID STREQUAL "GNU") 
@@ -375,41 +375,41 @@ target_include_directories(wi4mpi_OMPI_MPICH
 
 set_target_properties(wi4mpi_INTEL_INTEL
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_GNU_SOURCE -DINTEL_INTEL"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -DINTEL_INTEL"
 )
 set_target_properties(wi4mpi_INTEL_OMPI
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_GNU_SOURCE -DINTEL_OMPI "
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -DINTEL_OMPI "
 )
 set_target_properties(wi4mpi_INTEL_MPICH
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_GNU_SOURCE -DINTEL_INTEL "
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -DINTEL_INTEL "
 )
 
 set_target_properties(wi4mpi_MPICH_INTEL
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_GNU_SOURCE -DINTEL_INTEL"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -DINTEL_INTEL"
 )
 set_target_properties(wi4mpi_MPICH_OMPI
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_GNU_SOURCE -DINTEL_OMPI "
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -DINTEL_OMPI "
 )
 set_target_properties(wi4mpi_MPICH_MPICH
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_GNU_SOURCE -DINTEL_INTEL "
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -DINTEL_INTEL "
 )
 
 set_target_properties(wi4mpi_OMPI_INTEL
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_GNU_SOURCE -DOMPI_INTEL"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -DOMPI_INTEL"
 )
 set_target_properties(wi4mpi_OMPI_MPICH
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_GNU_SOURCE -DOMPI_INTEL"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -DOMPI_INTEL"
 )
 set_target_properties(wi4mpi_OMPI_OMPI
                       PROPERTIES
-                      COMPILE_FLAGS "${WI4MPI_FLAGS} -D_GNU_SOURCE -DOMPI_OMPI"
+                      COMPILE_FLAGS "${WI4MPI_FLAGS} -DOMPI_OMPI"
 )
 
 foreach(LIB ${LIST_FAKECXX})
